--- a/.gitignore
+++ b/.gitignore
@@ -46,39 +46,39 @@ sysinfo.txt
 *.v12
 
 # General Folders
-/Unity/*/[Ll]ibrary/
-/Unity/*/[Ll]ogs/
-/Unity/*/[Ll]ibrary/
-/Unity/*/[Tt]emp/
-/Unity/*/[Oo]bj/
-/Unity/*/[Bb]uild/
-/Unity/*/[Bb]uilds/
-/Unity/*/[Bb]in
-/Unity/*/[Dd]ebug*/
-/Unity/*/[Rr]elease*/
-/Unity/*/ipch/
-/Unity/*/obj/
-/Unity/*/UWP/
-/Unity/*/WindowsStore/
-/Unity/*/WS/
-/Unity/*/UnityVS/
-/Unity/*/UnityVS.meta
+VirtualShack/Unity/*/[Ll]ibrary/
+VirtualShack/Unity/*/[Ll]ogs/
+VirtualShack/Unity/*/[Ll]ibrary/
+VirtualShack/Unity/*/[Tt]emp/
+VirtualShack/Unity/*/[Oo]bj/
+VirtualShack/Unity/*/[Bb]uild/
+VirtualShack/Unity/*/[Bb]uilds/
+VirtualShack/Unity/*/[Bb]in
+VirtualShack/Unity/*/[Dd]ebug*/
+VirtualShack/Unity/*/[Rr]elease*/
+VirtualShack/Unity/*/ipch/
+VirtualShack/Unity/*/obj/
+VirtualShack/Unity/*/UWP/
+VirtualShack/Unity/*/WindowsStore/
+VirtualShack/Unity/*/WS/
+VirtualShack/Unity/*/UnityVS/
+VirtualShack/Unity/*/UnityVS.meta
 
-/Unity/[Ll]ibrary/
-/Unity/[Ll]ogs/
-/Unity/[Ll]ibrary/
-/Unity/[Tt]emp/
-/Unity/[Oo]bj/
-/Unity/[Bb]uild/
-/Unity/[Bb]uilds/
-/Unity/[Bb]in
-/Unity/[Dd]ebug*/
-/Unity/[Rr]elease*/
-/Unity/ipch/
-/Unity/obj/
-/Unity/UWP/
-/Unity/WindowsStore/
-/Unity/WS/
-/Unity/UnityVS/
-/Unity/UnityVS.meta
-/BUILD_ios
+VirtualShack/Unity/[Ll]ibrary/
+VirtualShack/Unity/[Ll]ogs/
+VirtualShack/Unity/[Ll]ibrary/
+VirtualShack/Unity/[Tt]emp/
+VirtualShack/Unity/[Oo]bj/
+VirtualShack/Unity/[Bb]uild/
+VirtualShack/Unity/[Bb]uilds/
+VirtualShack/Unity/[Bb]in
+VirtualShack/Unity/[Dd]ebug*/
+VirtualShack/Unity/[Rr]elease*/
+VirtualShack/Unity/ipch/
+VirtualShack/Unity/obj/
+VirtualShack/Unity/UWP/
+VirtualShack/Unity/WindowsStore/
+VirtualShack/Unity/WS/
+VirtualShack/Unity/UnityVS/
+VirtualShack/Unity/UnityVS.meta
+VirtualShack/BUILD_ios
